Revert "[xbmc][settings][GL][DX]: Remove test patterns"
This reverts commit bec910a77ac91779bcc20179a390ccdd21aac78c.

--- a/xbmc/rendering/gl/CMakeLists.txt
+++ b/xbmc/rendering/gl/CMakeLists.txt
@@ -1,9 +1,11 @@
-set(SOURCES RenderSystemGL.cpp
+set(SOURCES GUIWindowTestPatternGL.cpp
+            RenderSystemGL.cpp
             ScreenshotSurfaceGL.cpp
             ../MatrixGL.cpp
             GLShader.cpp)
 
-set(HEADERS RenderSystemGL.h
+set(HEADERS GUIWindowTestPatternGL.h
+            RenderSystemGL.h
             ScreenshotSurfaceGL.h
             ../MatrixGL.h
             GLShader.h)
