--- a/xbmc/rendering/dx/CMakeLists.txt
+++ b/xbmc/rendering/dx/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(SOURCES DeviceResources.cpp
+            GUIWindowTestPatternDX.cpp
             RenderSystemDX.cpp
             ScreenshotSurfaceWindows.cpp)
 
 set(HEADERS DeviceResources.h
             DirectXHelper.h
+            GUIWindowTestPatternDX.h
             RenderContext.h
             RenderSystemDX.h
             ScreenshotSurfaceWindows.h)
