add support for floating point colors in general rendering code and migrate test patterns to use it

--- a/xbmc/utils/CMakeLists.txt
+++ b/xbmc/utils/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES ActorProtocol.cpp
             BooleanLogic.cpp
             CharsetConverter.cpp
             CharsetDetection.cpp
+            Color.cpp
             ColorUtils.cpp
             CPUInfo.cpp
             Crc32.cpp
