--- a/xbmc/rendering/gles/CMakeLists.txt
+++ b/xbmc/rendering/gles/CMakeLists.txt
@@ -1,12 +1,10 @@
 if(OPENGLES_FOUND)
-  set(SOURCES GUIWindowTestPatternGLES.cpp
-              RenderSystemGLES.cpp
+  set(SOURCES RenderSystemGLES.cpp
               ScreenshotSurfaceGLES.cpp
               ../MatrixGL.cpp
               GLESShader.cpp)
 
-  set(HEADERS GUIWindowTestPatternGLES.h
-              RenderSystemGLES.h
+  set(HEADERS RenderSystemGLES.h
               ScreenshotSurfaceGLES.h
               ../MatrixGL.h
               GLESShader.h)
